# equity-signals

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  gunicorn.conf.py  pyproject.toml  test_mvp_local.py
.github/workflows/: trading.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  health.py  orders.py  signals.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: __init__.py  llm_service.py  signal_engine.py  universe_service.py
config/: watchlist.json
equity_signals/: __init__.py  cli.py  config.py  exceptions.py
equity_signals/data/: __init__.py  alpaca_loader.py  fmp_loader.py  yfinance_loader.py
equity_signals/execution/: __init__.py  alpaca_trader.py
equity_signals/notifications/: __init__.py  telegram.py
equity_signals/scripts/: __init__.py  run_signal_scan.py  run_universe_scan.py
equity_signals/strategies/: __init__.py  base.py  mean_reversion.py
equity_signals/universe/: __init__.py  ticker_loader.py  universe_filter.py  universe_store.py
scripts/: daily_exit_check.py  run_entry.py  run_exit.py  run_from_watchlist.py  run_signals.py  run_weekly_entry.py  run_weekly_scan.py  run_weekly_value.py
tests/: __init__.py  test_alpaca_loader.py  test_mean_reversion.py  test_universe_filter.py  test_yfinance_loader.py
tracking/: semana_01.md
